2006-10-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PluginUtils/_Plugins.py: ignore pressing apply without
	a plugin being selected
	* src/plugins/SoundGen.py: Dont fail with empty database

2006-10-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): Do not create
	logs when TXN is disabled.

2006-10-05  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (set_inactive): Check active status.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_11): Upgrade
	addresses in repositories.
	* src/Config/_GrampsConfigKeys.py: Regenerate file (proper type
	for transactions key).

2006-10-04  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs/_EventEmbedList.py: catch attempt to multiply
	edit an event through events and event references

2006-10-03  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: don't try to change families if the
	parents don't exist

2006-10-03  Jerome Rapinat  <romjerome@yahoo.fr>
	* src/plugins/ChangeNames.py: fix path name

2006-10-03  Don Allingham  <don@gramps-project.org>
	* src/plugins/PatchNames.py: clean up
	* src/GrampsLogger/_ErrorReportAssistant.py: capitalize "GRAMPS"
	* src/ViewManager.py: display buttons on first open
	* src/Editors/_EditSourceRef.py: fix cancelling of text (bug #450)
	* src/DisplayTabs/_NoteTab.py: fix cancelling of text
	* src/DisplayTabs/_TextTab.py: fix cancelling of text 

2006-10-02  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadXML.py: save description properly on read
	* src/RelLib/_Location.py: call parent class properly
	* src/Selectors/_SelectPlace.py: use proper column for place handle
	* src/DisplayModels/_PlaceModel.py: specify place handle

2006-10-01  Don Allingham  <don@gramps-project.org>
	* src/Utils.py: catch divide by zero case
	* src/ViewManager.py: change change to same page (#410)

2006-09-29  Don Allingham  <don@gramps-project.org>